qa file modified

--- a/Limit-Service-qa.properties
+++ b/Limit-Service-qa.properties
@@ -1,2 +1,2 @@
-limit-service.min=11111111111111111111111
-limit-service.max=22222222222222222222222
+limit-service.min=123
+limit-service.max=4567890
